Update ImageResizeServer.java